Transform Stella from water delivery to generic business platform
- Updated browser tab title from 'Water Delivery' to 'Business Management Platform'
- Changed logo from water drop (💧) to sparkle star (✨) throughout UI
- Simplified main app view to show just 'Stella' in blue text
- Removed all water delivery references from components and copy
- Updated product categories from water-specific to generic business items
- Changed database name from stella_whatsapp to stella_business
- Updated app name and branding to generic business terminology
- Maintained all functionality while making platform industry-agnostic

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/stella-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stella - Water Delivery Business Platform</title>
-    <meta name="description" content="Complete water delivery business management platform with WhatsApp integration, customer chat, and order management." />
+    <title>Stella - Business Management Platform</title>
+    <meta name="description" content="Complete business management platform with WhatsApp integration, customer chat, and order management." />
   </head>
   <body>
     <div id="root"></div>
